Prueba/Generated/RedlangParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.13.2
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from Definition/Redlang.g4 by ANTLR 4.13.2

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.13.2")]
[System.CLSCompliant(false)]
public partial class RedlangParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		FUNC=1, ENTRY=2, DECLARE=3, SET=4, OBJECT=5, USE=6, CHECK=7, OTHERWISE=8, 
		LOOP=9, REPEAT=10, GIVES=11, AND=12, OR=13, NOT=14, NULL=15, TYPE_I=16, 
		TYPE_F=17, TYPE_B=18, TYPE_S=19, ASK=20, SHOW=21, LEN=22, CONVERT_OP=23, 
		FILE_OP=24, BOOL=25, FLOAT=26, INT=27, STRING=28, IDENT=29, ID=30, COMMA=31, 
		DOT=32, COLON=33, SEMI_COLON=34, EQUAL=35, QUESTION=36, UNDERSCORE=37, 
		O_PAREN=38, C_PAREN=39, O_BRACKETS=40, C_BRACKETS=41, O_BRACES=42, C_BRACES=43, 
		PLUS=44, MINUS=45, MULTIPLY=46, DIVIDE=47, MODULO=48, LTHAN=49, GTHAN=50, 
		LTE=51, GTE=52, EQ=53, NEQ=54, WS=55;
	public const int
		RULE_program = 0, RULE_use_stmt = 1, RULE_clase_decl = 2, RULE_classMember = 3, 
		RULE_func_decl = 4, RULE_entry_func_decl = 5, RULE_param_list = 6, RULE_param = 7, 
		RULE_block = 8, RULE_statement = 9, RULE_declare_stmt = 10, RULE_set_stmt = 11, 
		RULE_assign_target = 12, RULE_return_stmt = 13, RULE_stmt_control = 14, 
		RULE_check_stmt = 15, RULE_otherwiseOpcional = 16, RULE_loop_stmt = 17, 
		RULE_loopInit = 18, RULE_accionLoop = 19, RULE_repeat_stmt = 20, RULE_decl_head = 21, 
		RULE_data_type = 22, RULE_type_base = 23, RULE_array_specifier = 24, RULE_expression = 25, 
		RULE_comparator = 26, RULE_factor = 27, RULE_literal = 28, RULE_array_literal = 29, 
		RULE_array_access = 30, RULE_member_access = 31, RULE_func_call = 32, 
		RULE_arg_list = 33;
	public static readonly string[] ruleNames = {
		"program", "use_stmt", "clase_decl", "classMember", "func_decl", "entry_func_decl", 
		"param_list", "param", "block", "statement", "declare_stmt", "set_stmt", 
		"assign_target", "return_stmt", "stmt_control", "check_stmt", "otherwiseOpcional", 
		"loop_stmt", "loopInit", "accionLoop", "repeat_stmt", "decl_head", "data_type", 
		"type_base", "array_specifier", "expression", "comparator", "factor", 
		"literal", "array_literal", "array_access", "member_access", "func_call", 
		"arg_list"
	};

	private static readonly string[] _LiteralNames = {
		null, "'func'", "'entry'", "'declare'", "'set'", "'object'", "'use'", 
		"'check'", "'otherwise'", "'loop'", "'repeat'", "'gives'", "'and'", "'or'", 
		"'not'", "'null'", "'i'", "'f'", "'b'", "'s'", "'ask'", "'show'", "'len'", 
		null, null, null, null, null, null, null, null, "','", "'.'", "':'", "';'", 
		"'='", "'?'", "'_'", "'('", "')'", "'['", "']'", "'{'", "'}'", "'+'", 
		"'-'", "'*'", "'/'", "'%'", "'<'", "'>'", "'<='", "'>='", "'=='", "'!='"
	};
	private static readonly string[] _SymbolicNames = {
		null, "FUNC", "ENTRY", "DECLARE", "SET", "OBJECT", "USE", "CHECK", "OTHERWISE", 
		"LOOP", "REPEAT", "GIVES", "AND", "OR", "NOT", "NULL", "TYPE_I", "TYPE_F", 
		"TYPE_B", "TYPE_S", "ASK", "SHOW", "LEN", "CONVERT_OP", "FILE_OP", "BOOL", 
		"FLOAT", "INT", "STRING", "IDENT", "ID", "COMMA", "DOT", "COLON", "SEMI_COLON", 
		"EQUAL", "QUESTION", "UNDERSCORE", "O_PAREN", "C_PAREN", "O_BRACKETS", 
		"C_BRACKETS", "O_BRACES", "C_BRACES", "PLUS", "MINUS", "MULTIPLY", "DIVIDE", 
		"MODULO", "LTHAN", "GTHAN", "LTE", "GTE", "EQ", "NEQ", "WS"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "Redlang.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override int[] SerializedAtn { get { return _serializedATN; } }

	static RedlangParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public RedlangParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public RedlangParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class ProgramContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Eof() { return GetToken(RedlangParser.Eof, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public Use_stmtContext[] use_stmt() {
			return GetRuleContexts<Use_stmtContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public Use_stmtContext use_stmt(int i) {
			return GetRuleContext<Use_stmtContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public Clase_declContext[] clase_decl() {
			return GetRuleContexts<Clase_declContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public Clase_declContext clase_decl(int i) {
			return GetRuleContext<Clase_declContext>(i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_program; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IRedlangListener typedListener = listener as IRedlangListener;
			if (typedListener != null) typedListener.EnterProgram(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IRedlangListener typedListener = listener as IRedlangListener;
			if (typedListener != null) typedListener.ExitProgram(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IRedlangVisitor<TResult> typedVisitor = visitor as IRedlangVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitProgram(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ProgramContext program() {
		ProgramContext _localctx = new ProgramContext(Context, State);
		EnterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 72;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==OBJECT || _la==USE) {
				{
				State = 70;
				ErrorHandler.Sync(this);
				switch (TokenStream.LA(1)) {
				case USE:
					{
					State = 68;
					use_stmt();
					}
					break;
				case OBJECT:
					{
					State = 69;
					clase_decl();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				State = 74;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 75;
			Match(Eof);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Use_stmtContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode USE() { return GetToken(RedlangParser.USE, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode IDENT() { return GetToken(RedlangParser.IDENT, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode SEMI_COLON() { return GetToken(RedlangParser.SEMI_COLON, 0); }
		public Use_stmtContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_use_stmt; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IRedlangListener typedListener = listener as IRedlangListener;
			if (typedListener != null) typedListener.EnterUse_stmt(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IRedlangListener typedListener = listener as IRedlangListener;
			if (typedListener != null) typedListener.ExitUse_stmt(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IRedlangVisitor<TResult> typedVisitor = visitor as IRedlangVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitUse_stmt(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Use_stmtContext use_stmt() {
		Use_stmtContext _localctx = new Use_stmtContext(Context, State);
		EnterRule(_localctx, 2, RULE_use_stmt);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 77;
			Match(USE);
			State = 78;
			Match(IDENT);
			State = 79;
			Match(SEMI_COLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Clase_declContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode OBJECT() { return GetToken(RedlangParser.OBJECT, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode IDENT() { return GetToken(RedlangParser.IDENT, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode O_BRACES() { return GetToken(RedlangParser.O_BRACES, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode C_BRACES() { return GetToken(RedlangParser.C_BRACES, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ClassMemberContext[] classMember() {
			return GetRuleContexts<ClassMemberContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public ClassMemberContext classMember(int i) {
			return GetRuleContext<ClassMemberContext>(i);
		}
		public Clase_declContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_clase_decl; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IRedlangListener typedListener = listener as IRedlangListener;
			if (typedListener != null) typedListener.EnterClase_decl(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IRedlangListener typedListener = listener as IRedlangListener;
			if (typedListener != null) typedListener.ExitClase_decl(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IRedlangVisitor<TResult> typedVisitor = visitor as IRedlangVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitClase_decl(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Clase_declContext clase_decl() {
		Clase_declContext _localctx = new Clase_declContext(Context, State);
		EnterRule(_localctx, 4, RULE_clase_decl);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 81;
			Match(OBJECT);
			State = 82;
			Match(IDENT);
			State = 83;
			Match(O_BRACES);
			State = 87;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 14L) != 0)) {
				{
				{
				State = 84;
				classMember();
				}
				}
				State = 89;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 90;
			Match(C_BRACES);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ClassMemberContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public Declare_stmtContext declare_stmt() {
			return GetRuleContext<Declare_stmtContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public Func_declContext func_decl() {
			return GetRuleContext<Func_declContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public Entry_func_declContext entry_func_decl() {
			return GetRuleContext<Entry_func_declContext>(0);
		}
		public ClassMemberContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_classMember; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IRedlangListener typedListener = listener as IRedlangListener;
			if (typedListener != null) typedListener.EnterClassMember(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IRedlangListener typedListener = listener as IRedlangListener;
			if (typedListener != null) typedListener.ExitClassMember(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IRedlangVisitor<TResult> typedVisitor = visitor as IRedlangVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitClassMember(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ClassMemberContext classMember() {
		ClassMemberContext _localctx = new ClassMemberContext(Context, State);
		EnterRule(_localctx, 6, RULE_classMember);
		try {
			State = 95;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case DECLARE:
				EnterOuterAlt(_localctx, 1);
				{
				State = 92;
				declare_stmt();
				}
				break;
			case FUNC:
				EnterOuterAlt(_localctx, 2);
				{
				State = 93;
				func_decl();
				}
				break;
			case ENTRY:
				EnterOuterAlt(_localctx, 3);
				{
				State = 94;
				entry_func_decl();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Func_declContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode FUNC() { return GetToken(RedlangParser.FUNC, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode IDENT() { return GetToken(RedlangParser.IDENT, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode O_PAREN() { return GetToken(RedlangParser.O_PAREN, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode C_PAREN() { return GetToken(RedlangParser.C_PAREN, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode COLON() { return GetToken(RedlangParser.COLON, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public Data_typeContext data_type() {
			return GetRuleContext<Data_typeContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public BlockContext block() {
			return GetRuleContext<BlockContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public Param_listContext param_list() {
			return GetRuleContext<Param_listContext>(0);
		}
		public Func_declContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_func_decl; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IRedlangListener typedListener = listener as IRedlangListener;
			if (typedListener != null) typedListener.EnterFunc_decl(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IRedlangListener typedListener = listener as IRedlangListener;
			if (typedListener != null) typedListener.ExitFunc_decl(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IRedlangVisitor<TResult> typedVisitor = visitor as IRedlangVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitFunc_decl(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Func_declContext func_decl() {
		Func_declContext _localctx = new Func_declContext(Context, State);
		EnterRule(_localctx, 8, RULE_func_decl);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 97;
			Match(FUNC);
			State = 98;
			Match(IDENT);
			State = 99;
			Match(O_PAREN);
			State = 101;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==IDENT) {
				{
				State = 100;
				param_list();
				}
			}

			State = 103;
			Match(C_PAREN);
			State = 104;
			Match(COLON);
			State = 105;
			data_type();
			State = 106;
			block();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Entry_func_declContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode ENTRY() { return GetToken(RedlangParser.ENTRY, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public Func_declContext func_decl() {
			return GetRuleContext<Func_declContext>(0);
		}
		public Entry_func_declContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_entry_func_decl; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IRedlangListener typedListener = listener as IRedlangListener;
			if (typedListener != null) typedListener.EnterEntry_func_decl(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IRedlangListener typedListener = listener as IRedlangListener;
			if (typedListener != null) typedListener.ExitEntry_func_decl(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IRedlangVisitor<TResult> typedVisitor = visitor as IRedlangVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitEntry_func_decl(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Entry_func_declContext entry_func_decl() {
		Entry_func_declContext _localctx = new Entry_func_declContext(Context, State);
		EnterRule(_localctx, 10, RULE_entry_func_decl);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 108;
			Match(ENTRY);
			State = 109;
			func_decl();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Param_listContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ParamContext[] param() {
			return GetRuleContexts<ParamContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public ParamContext param(int i) {
			return GetRuleContext<ParamContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] COMMA() { return GetTokens(RedlangParser.COMMA); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode COMMA(int i) {
			return GetToken(RedlangParser.COMMA, i);
		}
		public Param_listContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_param_list; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IRedlangListener typedListener = listener as IRedlangListener;
			if (typedListener != null) typedListener.EnterParam_list(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IRedlangListener typedListener = listener as IRedlangListener;
			if (typedListener != null) typedListener.ExitParam_list(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IRedlangVisitor<TResult> typedVisitor = visitor as IRedlangVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitParam_list(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Param_listContext param_list() {
		Param_listContext _localctx = new Param_listContext(Context, State);
		EnterRule(_localctx, 12, RULE_param_list);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 111;
			param();
			State = 116;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==COMMA) {
				{
				{
				State = 112;
				Match(COMMA);
				State = 113;
				param();
				}
				}
				State = 118;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ParamContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode IDENT() { return GetToken(RedlangParser.IDENT, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode COLON() { return GetToken(RedlangParser.COLON, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public Data_typeContext data_type() {
			return GetRuleContext<Data_typeContext>(0);
		}
		public ParamContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_param; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IRedlangListener typedListener = listener as IRedlangListener;
			if (typedListener != null) typedListener.EnterParam(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IRedlangListener typedListener = listener as IRedlangListener;
			if (typedListener != null) typedListener.ExitParam(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IRedlangVisitor<TResult> typedVisitor = visitor as IRedlangVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitParam(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ParamContext param() {
		ParamContext _localctx = new ParamContext(Context, State);
		EnterRule(_localctx, 14, RULE_param);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 119;
			Match(IDENT);
			State = 120;
			Match(COLON);
			State = 121;
			data_type();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class BlockContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode O_BRACES() { return GetToken(RedlangParser.O_BRACES, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode C_BRACES() { return GetToken(RedlangParser.C_BRACES, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public StatementContext[] statement() {
			return GetRuleContexts<StatementContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public StatementContext statement(int i) {
			return GetRuleContext<StatementContext>(i);
		}
		public BlockContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_block; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IRedlangListener typedListener = listener as IRedlangListener;
			if (typedListener != null) typedListener.EnterBlock(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IRedlangListener typedListener = listener as IRedlangListener;
			if (typedListener != null) typedListener.ExitBlock(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IRedlangVisitor<TResult> typedVisitor = visitor as IRedlangVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitBlock(this);
			else return visitor.VisitChildren(this);
		}
	}
